# stickmynote-client

./: .env.local.build-only  .eslintrc.json  .gitignore  AUTH_MIGRATION_PROGRESS.md  AUTH_TEST_AND_MIGRATION_COMPLETE.md  CLAUDE.md  DEPLOYMENT_CHECKLIST.md  EXCHANGE_EMAIL_SETUP.md  GIT_SETUP_COMMANDS.md  INSTALLATION_BY_SERVER.md  MIGRATION_INDEX.md  MIGRATION_STATUS.md  MIGRATION_SUMMARY.md  ORGANIZATION_BRANDING_GUIDE.md  PRODUCTION_CHECKLIST.md  PRODUCTION_DEPLOYMENT.md  QUICK_REFERENCE.md  README.md  README_RLS_TESTS.md  SUPABASE_TO_LOCAL_AUTH_MIGRATION.md  WINDOWS_SERVICE_DEPLOYMENT.md  WINDOWS_SERVICE_SETUP.md  capacitor.config.ts  cookies.txt  instrumentation-client.ts  instrumentation.ts  jest.config.js  jest.env-setup.js  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  project-problems.json  sentry.edge.config.ts  sentry.server.config.ts  server.js  sonar-project.properties  test-ws-nextjs.js  test-ws.js  tsconfig.json  (+1 more)
.claude/: settings.local.json
__tests__/: html-sanitizer.test.tsx
app/: global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
certs/: server.crt
components/: AnalyticsPanel.tsx  ColorPalette.tsx  CommunityPanel.tsx  DateGroupedNoteGrid.tsx  GenericNoteTabs.tsx  GenericStickTabs.tsx  GridNoteItem.tsx  KeyboardDetector.tsx  MediaComponents.tsx  NoteContext.tsx  NotePreviewCard.tsx  PresenceTracker.tsx  ScreenReaderAnnounce.tsx  SearchStatsDialog.tsx  ServiceWorkerRegister.tsx  SettingsPanel.tsx  (+38 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+1690 files in other folders)
