[package]
name = "stick-my-note"
version = "1.0.0"
description = "Stick My Note Desktop Application"
authors = ["Stick My Note Team"]
edition = "2021"

[lib]
name = "stick_my_note_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "tray-icon",
  "image-png",
] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
